# LGF_NSE_GPU

./: .gitignore  CMakeLists.txt
Src/LGF_core/: CMakeLists.txt  LGFCore.H  LGFKernel.hpp  LGF_lookup_gen.py  addEverySource.cpp  consolidateMultiFab.cpp  solveBBFMM.cpp  tagSource.cpp
Src/NSE_core/: CMakeLists.txt  FlowField.H  ProjectionWorkspace.H  RKCoefficients.H  SpatialDiscretization.H  flowField.cpp  projectionWorkspace.cpp
Src/NSE_run/: CMakeLists.txt  IOManager.H  MyFunctions.H  SimConfig.H  initializeFlow.cpp  ioManager.cpp  main.cpp
Src/NSE_run/Utils/: debug.sh  description.txt  gpu_multi.sh  gpu_single.sh  inputs  postProcessKE.py
